[tool.poetry]
name = "spotify-stats"
version = "0.1.0"
description = "Analyzes spotify data"
authors = ["langeandreas <langeandreas5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
torch = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
